# unipm

./: .clang-format  CMakeLists.txt  README.md
docs/: UI_IMPROVEMENTS.md
include/unipm/: adapter.h  config.h  executor.h  os_detector.h  parser.h  pm_detector.h  resolver.h  safety.h  types.h  ui.h
src/: executor.cpp  main.cpp  parser.cpp  self_uninstall.cpp  ui.cpp
website/: index.html
